--- a/webapp/src/features/JobsMatcher/styles/JobDetails.module.css
+++ b/webapp/src/features/JobsMatcher/styles/JobDetails.module.css
@@ -15,6 +15,10 @@
   line-height: 1.5;
   color: #333333;
   margin-bottom: 10px;
+  width: 450px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .job-details-title-off {
@@ -31,6 +35,11 @@
   line-height: 2.14;
   color: #bfc4d3;
   margin-bottom: 20px;
+}
+
+.job-details-subtitle-location, .job-details-subtitle-company {
+  font-weight: bold;
+  color: #3e89ec;
 }
 
 .job-details-actions {
