TF-206 岗位匹配 - finishing touches (#257)
* fix - job matcher fails when there is no location object

* fix - job matcher fails when there is no location object

* fix - add in resumeUuid for matching paging-match

* fix a refinement redirect issue

* try fix the build

* fix - clear job when search result is empty

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/webapp/src/features/App/styles/index.scss
+++ b/webapp/src/features/App/styles/index.scss
@@ -27,5 +27,11 @@
     &.padding-for-nav {
       padding-top: 80px;
     }
+
+    .form-validation-wrapper {
+      .invalid-feedback {
+          display: block;
+      }
+  }
   }
 }
