Update 这么好用，我也试试跳转链接。 (#255)
Co-authored-by: sliu <sliu@shuangsuangsmbp.lan>

--- a/onboarding-app/src/main/resources/templates/pages/home.html
+++ b/onboarding-app/src/main/resources/templates/pages/home.html
@@ -208,7 +208,7 @@
     </div>
   </div>
   <p style="text-align: center; margin-top: 1.75rem">
-    <a href="/" class="button">这么好用？我也试试</a>
+    <a href="/login" class="button">这么好用？我也试试</a>
   </p>
 </section>
 <footer>
