TF139 + TF222 wechat 二维码 + robot.txt (#266)
* feat - change wechat login to window popup

* feat - add in robots.txt

* fix - 岗位匹配的功能完善

* feat - add job link

Co-authored-by: xelody <melodypxin@gmail.com>
Co-authored-by: A.L <ssliu@ualberta.ca>

--- a/onboarding-app/src/main/resources/templates/layout.html
+++ b/onboarding-app/src/main/resources/templates/layout.html
@@ -6,6 +6,7 @@
   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 >
 <head>
+  <script src="http://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
