fix assets path

--- a/onboarding-app/src/main/resources/templates/pages/home.html
+++ b/onboarding-app/src/main/resources/templates/pages/home.html
@@ -17,7 +17,7 @@
           <a href="/" class="hidden-mobile nav-item">智能创建</a>
           <a href="/" class="hidden-mobile nav-item">背景提升</a>
           <a href="/" class="hidden-mobile nav-item">关于我们</a>
-          <a href="/" class="nav-item">登入/注册</a>
+          <a href="/login" class="nav-item">登入/注册</a>
         </div>
       </nav>
     </header>
@@ -34,7 +34,7 @@
           5分钟内<span class="blue underline">免费</span
           >创建一份简历，百万毕业生的最佳选择
         </p>
-        <a href="/"> 点击开始创建 </a>
+        <a href="/login"> 点击开始创建 </a>
       </div>
       <div class="banner-right">
         <!-- <img src="./assets/resume.png" /> -->
@@ -113,7 +113,7 @@
             通过拖拽、点击的方式，直接将撰写例句，放入编辑区，高亮可替换部分，他山之石，可以攻玉，参考成功例句，帮助自己脱颖而出，量化成就，专业表达，让您顺利通过筛选。
           </p>
           <p class="action-item">
-            <a href="/"> 点击开始创建 </a>
+            <a href="/login"> 点击开始创建 </a>
           </p>
         </div>
       </div>
@@ -138,7 +138,7 @@
             版式是为内容服务的，整洁清晰的排版，大大提高通过机筛、人筛的效率；过分花哨的排版，反而有碍于ATS识别关键内容。一键自动整页，方便快捷，把内容自动规整到一页或者两页纸，显得专业干练。方便您更加专注在经历资质的展示上。
           </p>
           <p class="action-item">
-            <a href="/"> 点击开始创建 </a>
+            <a href="/login"> 点击开始创建 </a>
           </p>
         </div>
         <div class="image-right"><img src="./assets/2.png" /></div>
@@ -163,7 +163,7 @@
             通过剖析行业主流ATS系统，依托AI、大数据等技术，解析“岗位要求”与“我的资质”之间的异同；参考行业精选表述，通过拖拽、替换的方式，快速完成精修。
           </p>
           <p class="action-item">
-            <a href="/"> 点击开始创建 </a>
+            <a href="/login"> 点击开始创建 </a>
           </p>
         </div>
       </div>
@@ -186,7 +186,7 @@
             您不用在不同平台，注册多个账号，在快刀这里，检索到非常完整的岗位列表，同时，您可以通过不同关键词搜索工作：职位名称，城市，行业，公司名称，岗位类型（实习，全职）等。找到您中意的刚位之后，您可以快速进行对岗智能精修，然后投递。
           </p>
           <p class="action-item">
-            <a href="/"> 点击开始创建 </a>
+            <a href="/login"> 点击开始创建 </a>
           </p>
         </div>
         <div class="image-right"><img src="./assets/4.png" /></div>
