--- a/onboarding-app/src/main/resources/static/css/home.css
+++ b/onboarding-app/src/main/resources/static/css/home.css
@@ -56,7 +56,7 @@ nav {
 }
 
 .banner {
-  background-image: url('./assets/bg-image.png');
+  background-image: url('../assets/bg-image.png');
   height: 50rem;
   background-size: 100%;
   background-position: -40% 0%;
@@ -105,7 +105,7 @@ nav {
 }
 .banner-right::after {
   background-size: cover;
-  background-image: url('./assets/Resume_dropshadow.png');
+  background-image: url('../assets/Resume_dropshadow.png');
   content: "";
   display: block;
   position: absolute;
@@ -287,7 +287,7 @@ a.button {
   width: 801px;
   height: 756px;
   position: absolute;
-  background-image: url(./assets/cloud_1.svg);
+  background-image: url(../assets/cloud_1.svg);
   background-position: 0%;
   background-repeat: no-repeat;
 }
@@ -299,7 +299,7 @@ a.button {
   width: 800px;
   height: 756px;
   position: absolute;
-  background-image: url(./assets/cloud_3.svg);
+  background-image: url(../assets/cloud_3.svg);
   background-position: 0%;
   background-size: contain;
   background-repeat: no-repeat;
@@ -313,7 +313,7 @@ a.button {
   width: 900px;
   height: 800px;
   position: absolute;
-  background-image: url('./assets/cloud_2.svg');
+  background-image: url('../assets/cloud_2.svg');
   background-position: 0%;
   background-repeat: no-repeat;
 }
@@ -331,7 +331,7 @@ a.button {
   width: 740px;
   height: 756px;
   position: absolute;
-  background-image: url('./assets/cloud_4.svg');
+  background-image: url('../assets/cloud_4.svg');
   background-position: 0%;
   background-repeat: no-repeat;
 }
@@ -494,7 +494,7 @@ p.action-item {
   }
   .banner {
       border-top: 1px solid #f2f4f9;
-      background-image: url('./assets/bannerBG.png');
+      background-image: url('../assets/bannerBG.png');
       background-image: none;
       height: 580px;
       background-size: 100%;
