--- a/webapp/src/features/ResumeStarter/styles/ResumeStarter.module.css
+++ b/webapp/src/features/ResumeStarter/styles/ResumeStarter.module.css
@@ -3,7 +3,7 @@
   margin: 200px auto;
 }
 
-.title{
+.title {
   font-size: 30px;
   text-align: center;
   color: #333333;
@@ -14,43 +14,43 @@
   margin: 5px;
 }
 
-.optionWrapper{
+.optionWrapper {
   display: flex;
 }
 
-.option{
+.option {
   width: 480px;
   height: 349px;
-  margin:20px;
-  padding:80px;
+  margin: 20px;
+  padding: 80px;
   border-radius: 8px;
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
-  text-align:center;
+  text-align: center;
 }
 
-.optionTitle{
+.optionTitle {
   font-size: 30px;
   font-weight: bold;
   color: #3e89ec;
 }
 
-.optionDescription{
+.optionDescription {
   font-size: 14px;
   color: #bfc4d3;
 }
 
-.buttonWrapper{
+.buttonWrapper {
   display: flex;
   justify-content: space-evenly;
   padding: 30px;
 }
 
-.buttonWrapper .button{
+.buttonWrapper .button {
   width: 88px;
 }
 
-.uploadButton{
-  margin-top:30px;
+.uploadButton {
+  margin-top: 30px;
   width: 190px;
   border-radius: 4px;
   height: 42px;
@@ -58,6 +58,46 @@
   background-color: #3e89ec;
 }
 
-.hidden{
+.hidden {
   display: none;
+}
+
+/* Naming resume full screen modal  */
+
+.full_screen_container {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: white;
+  top: 0;
+  left: 0;
+  text-align: center;
+  padding: 200px;
+}
+
+.h2 {
+  font-size: 30px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.p {
+  font-size: 14px;
+  color: #bfc4d3;
+}
+
+.inputContainer {
+  width: 100%;
+  margin: 50px auto;
+}
+
+.inputContainer input {
+  border: none;
+  text-align: center;
+}
+
+.inputContainer input:focus {
+  border: none;
+  outline: none;
 }
