fix: 修复手机端不显示responsive (#288)

--- a/onboarding-app/src/main/resources/templates/layout.html
+++ b/onboarding-app/src/main/resources/templates/layout.html
@@ -6,6 +6,7 @@
   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 >
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="http://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
