--- a/webapp/src/features/SmartResume/styles/Assistant.module.css
+++ b/webapp/src/features/SmartResume/styles/Assistant.module.css
@@ -8,6 +8,11 @@
   background-color: white;
   z-index: 1;
 }
+@media screen and (max-width: 1440px) {
+  .container {
+    margin-left: 800px;
+  }
+}
 
 .container {
   left: -80px;
