TF-192 CSS + 500 页面 (#308)

--- a/webapp/src/features/JobsMatcher/styles/JobDetails.module.css
+++ b/webapp/src/features/JobsMatcher/styles/JobDetails.module.css
@@ -21,6 +21,14 @@
   text-overflow: ellipsis;
 }
 
+.job-details-title-content {
+  display: inline-block;
+  width: 360px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .job-details-title-off {
   float: right;
   height: 19px;
