--- a/webapp/src/features/SmartResume/components/ProgressHeader/ProgressHeader.module.css
+++ b/webapp/src/features/SmartResume/components/ProgressHeader/ProgressHeader.module.css
@@ -1,9 +1,9 @@
 .container {
   display: flex;
   width: 100%;
-  -webkit-box-shadow:0px 1px 0px #bfc4d3;
-  -moz-box-shadow:0px 1px 0px #bfc4d3;
-  box-shadow:0px 1px 0px #bfc4d3;
+  -webkit-box-shadow: 0px 1px 0px #bfc4d3;
+  -moz-box-shadow: 0px 1px 0px #bfc4d3;
+  box-shadow: 0px 1px 0px #bfc4d3;
   position: sticky;
   width: calc(100% + 4px);
   top: 0;
@@ -12,48 +12,47 @@
   background: #fff;
   border: 2px solid #fff;
 }
-.container > div{
-  padding:5px 20px;
-  margin-top:10px;
-  
+
+.container>div {
+  padding: 5px 10px;
+  margin-top: 10px;
 }
+
 .circle {
   width: 60px;
   height: 60px;
   border-radius: 30px;
-  border-style:solid;
-  border-width:5px;
+  border-style: solid;
+  border-width: 5px;
   font-size: 20px;
   line-height: 50px;
   text-align: center;
   cursor: pointer;
 }
 
-
-.progress{
+.progress {
   flex-grow: 1;
 }
 
-.title{
-  font-size: 20px;
-  font-weight: bold;
-  color: #bfc4d3;
+.right {
+  float: right;
 }
 
-p{
+p {
   font-size: 14px;
   color: #bfc4d3;
   margin-bottom: 0.5rem;
 }
-.progressBar{
+
+.progressBar {
   height: 7px;
 }
 
 @media only screen and (max-width: 1440px) {
-  .hideSM{
+  .hideSM {
     /* display: none; */
   }
-  .progress{
-    margin-bottom:10px;
+  .progress {
+    margin-bottom: 10px;
   }
 }
