--- a/webapp/src/features/SmartResume/styles/index.scss
+++ b/webapp/src/features/SmartResume/styles/index.scss
@@ -80,7 +80,7 @@
       height: 38px;
       font-size: 16px;
       line-height: 24px;
-
+      font-weight: 400;
       &::placeholder {
         color: black;
       }
