--- a/webapp/src/features/SmartResume/styles/AvatarUpload.module.css
+++ b/webapp/src/features/SmartResume/styles/AvatarUpload.module.css
@@ -1,71 +1,85 @@
-.avatarContainer{
+.avatarContainer {
   position: relative;
-  margin-bottom:10px;
+  margin-bottom: 10px;
 }
-.avatarPreviewContainer{
-  display:flex;
+
+.avatarPreviewContainer {
+  display: flex;
   align-items: center;
 }
-.avatarPreview{
+
+.avatarPreview {
   width: 70px;
   height: 70px;
   border-radius: 80px;
   background-color: #f2f4f9;
 }
-.avatarPreview img{
+
+.avatarPreview img {
   width: 100%;
 }
-.avatarPreviewText{
+
+.avatarPreviewText {
   color: #d5d9e6;
   padding-left: 30px;
 }
-.modal{
+
+.modal {
   width: 480px;
   border-radius: 8px;
-  padding:20px;
+  padding: 20px;
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.15);
-  position:absolute;
-  top:0;
+  position: absolute;
+  top: -100px;
   left: 200px;
   background: #fff;
   z-index: 1;
 }
-.modalOpen{
-  display:block;
+
+.modalOpen {
+  display: block;
 }
-.modalClosed{
-  display:none;
+
+.modalClosed {
+  display: none;
 }
-.modal h2{
+
+.modal h2 {
   font-size: 20px;
-  font-weight:bold;
+  font-weight: bold;
   color: #333333;
-  margin-bottom:20px;
+  margin-bottom: 20px;
 }
-.samplesContainer{
-  margin-top:50px;
+
+.samplesContainer {
+  margin-top: 50px;
 }
-.samples{
-  display:flex;
+
+.samples {
+  display: flex;
   flex-wrap: wrap;
 }
-.sample{
-  flex: 1 0 30%; 
+
+.sample {
+  flex: 1 0 30%;
   margin: 5px;
-  height: 120px;
-  position:relative;
+  height: 135px;
+  position: relative;
   border-radius: 4px;
-  border:solid thin;
+  border: solid thin;
+  background-position: center;
+  background-size: contain;
 }
-.sample img{
+
+.sample img {
   fill: red;
   width: 20px;
   height: 20px;
-  position:absolute;
+  position: absolute;
   right: -10px;
   top: -10px;
-  background: white;
 }
-.photoEditButton{
-  margin-top:10px;
+
+.photoEditButton {
+  margin-top: 10px;
 }
