[FE] Marketing page UI updates (#336)

--- a/onboarding-app/src/main/resources/templates/pages/home.html
+++ b/onboarding-app/src/main/resources/templates/pages/home.html
@@ -13,11 +13,10 @@
           <img src="./assets/logo.svg" />
         </div>
         <div class="right">
-          <a href="/" class="hidden-mobile nav-item active"> 首页 </a>
-          <a href="/" class="hidden-mobile nav-item">智能创建</a>
-          <a href="/" class="hidden-mobile nav-item">背景提升</a>
+          <a href="/" class="hidden-mobile nav-item active" style="display:none"> 首页 </a>
+          <a href="/" class="hidden-mobile nav-item" style="display:none">智能创建</a>
+          <a href="/" class="hidden-mobile nav-item" style="display:none">背景提升</a>
           <a href="/" class="hidden-mobile nav-item">关于我们</a>
-          <a href="/login" class="nav-item">登入/注册</a>
         </div>
       </nav>
     </header>
@@ -143,7 +142,7 @@
         </div>
         <div class="image-right"><img src="./assets/2.png" /></div>
       </div>
-      <div class="image-text-row">
+      <div class="image-text-row" style="display:none">
         <div class="image-left"><img src="./assets/3.png" /></div>
         <div class="text-right text-content svg3">
           <h3>针对岗位智能精修</h3>
@@ -168,7 +167,8 @@
         </div>
       </div>
       <div class="image-text-row">
-        <div class="text-left text-content svg4">
+        <div class="image-left" ><img src="./assets/4.png" /></div>
+        <div class="text-right text-content svg4">
           <h3>一站式岗位推荐搜索</h3>
           <div class="image-wrapper">
             <img src="./assets/4.png" />
@@ -189,7 +189,6 @@
             <a href="/login"> 点击开始创建 </a>
           </p>
         </div>
-        <div class="image-right"><img src="./assets/4.png" /></div>
       </div>
     </section>
     <div class="divider">
@@ -201,7 +200,7 @@
       <div class="row">
         <div class="col-4">
           <div class="image-container">
-            <img src="./assets/tester.jpg" />
+            <img src="./assets/lcx.png" />
           </div>
           <p class="test-name">刘程兴</p>
           <p class="blue title">
@@ -215,7 +214,7 @@
         </div>
         <div class="col-4">
           <div class="image-container">
-            <img src="./assets/tester.jpg" />
+            <img src="./assets/zxx.jpg" />
           </div>
           <p class="test-name">赵晓晓</p>
           <p class="blue title">
@@ -229,7 +228,7 @@
         </div>
         <div class="col-4">
           <div class="image-container">
-            <img src="./assets/tester.jpg" />
+            <img src="./assets/zmy.jpg" />
           </div>
           <p class="test-name">张敏颐</p>
           <p class="blue title">
@@ -247,7 +246,7 @@
       </p>
     </section>
     <footer>
-      <div class="content-wrapper">
+      <div class="content-wrapper" style="display:none">
         <div class="logo">
           <img src="./assets/logo.svg" />
         </div>
