[BE] add back login link to market page (#337)

--- a/onboarding-app/src/main/resources/templates/pages/home.html
+++ b/onboarding-app/src/main/resources/templates/pages/home.html
@@ -16,7 +16,8 @@
           <a href="/" class="hidden-mobile nav-item active" style="display:none"> 首页 </a>
           <a href="/" class="hidden-mobile nav-item" style="display:none">智能创建</a>
           <a href="/" class="hidden-mobile nav-item" style="display:none">背景提升</a>
-          <a href="/" class="hidden-mobile nav-item">关于我们</a>
+          <a href="/" class="hidden-mobile nav-item" style="display:none">关于我们</a>
+          <a href="/login" class="nav-item">登入/注册</a>
         </div>
       </nav>
     </header>
