[FE][TF-286] marketing page UI more updates (#345)

--- a/onboarding-app/src/main/resources/templates/pages/home.html
+++ b/onboarding-app/src/main/resources/templates/pages/home.html
@@ -17,7 +17,8 @@
           <a href="/" class="hidden-mobile nav-item" style="display:none">智能创建</a>
           <a href="/" class="hidden-mobile nav-item" style="display:none">背景提升</a>
           <a href="/" class="hidden-mobile nav-item" style="display:none">关于我们</a>
-          <a href="/login" class="nav-item">登入/注册</a>
+          <a href="/login" class="header-right">登录</a>
+          <a href="/sign-up" class="header-right">免费注册</a>
         </div>
       </nav>
     </header>
@@ -210,7 +211,7 @@
             <span> 金融分析师 </span>
           </p>
           <p>
-            毕业前我试着投了好几家心仪的企业都没有收到任何回复，后来我就去找了我们学校的的就业顾问。顾问我推荐了这个免费的工具，就试着用用。后来修改了我很多之前简历的错误还推荐了一些课给我。半年后我面试普华通过了！谢谢！
+            毕业前我试着投过几家心仪的企业都没有收到任何回复，后来我去找了学校的就业顾问，他向我推荐了这款免费的简历工具，就试着用用。15分钟就制作好了1份简历，排版特别清晰并且很专业的感觉。嘻嘻，上面竟然还有简历评测功能，太惊喜了！ps：普华Offer到手，比心！
           </p>
         </div>
         <div class="col-4">
@@ -224,7 +225,7 @@
             <span> 高级投资分析师 </span>
           </p>
           <p>
-            以前我在小公司做会计。跳槽前我用过其他的简历修改工具，都没找到什么合适的工作。用了快刀之后竟然发现我其实可以试试投资分析师。我上了快刀推荐的分析师执照课程不久后就拿到了新世创投的工作。
+            以前我在小公司做会计。跳槽前我用过其他的简历工具，都没找到什么合适的工作。用了快刀之后竟然发现我可以试试投资分析师，鼓起勇气投了这个岗位，过了不久顺利通过面试拿到了新世创投的工作。
           </p>
         </div>
         <div class="col-4">
@@ -238,7 +239,7 @@
             <span> 初级前端工程师 </span>
           </p>
           <p>
-            上海交大毕业的我在参加了很多校招活动后竟然一个面试的机会都没有。朋友让我搜下看看是不是我简历写得不好。我看到快刀后试了一下，发现我简历写得非常差。根据里面的简历修改推荐做了大篇幅修改后就获得了很多面试机会！
+            我刚毕业于上海交大，曾经在参加过好几场校招宣讲会后，一个面试机会都没有。朋友建议我仔细修改下简历，偶然下我体验了快刀的经历写作助手，调整了不少实习内容的描述，2天后就获得了1个面试机会，最终拿到了理想 Offer，强烈安利快刀！
           </p>
         </div>
       </div>
