--- a/onboarding-app/src/main/resources/static/css/home.css
+++ b/onboarding-app/src/main/resources/static/css/home.css
@@ -493,6 +493,19 @@ p.action-item {
   .image-right, .image-left {
       display: none;
   }
+  .header-right {
+    width: 64px;
+    height: 21px;
+    font-family: MicrosoftYaHei;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.88;
+    letter-spacing: normal;
+    text-align: left;
+    color: #bfc4d3;
+  }
   .banner {
       border-top: 1px solid #f2f4f9;
       background-image: url('../assets/bannerBG.png');
