移除云朵 + 居中banner

--- a/onboarding-app/src/main/resources/templates/pages/home.html
+++ b/onboarding-app/src/main/resources/templates/pages/home.html
@@ -26,19 +26,21 @@
       <div class="display-mobile banner-image">
         <img src="./assets/bannerBG.png" />
       </div>
-      <div class="banner-left">
-        <h1>
-          只有前2%的简历能过第一轮筛选<br />
-          用快刀简历，成为这前<span class="blue">2%</span>吧！
-        </h1>
-        <p>
-          5分钟内<span class="blue underline">免费</span
-          >创建一份简历，百万毕业生的最佳选择
-        </p>
-        <a href="/login"> 点击开始创建 </a>
-      </div>
-      <div class="banner-right">
-        <!-- <img src="./assets/resume.png" /> -->
+      <div class="bnanner-container">
+        <div class="banner-left">
+          <h1>
+            只有前2%的简历能过第一轮筛选<br />
+            用快刀简历，成为这前<span class="blue">2%</span>吧！
+          </h1>
+          <p>
+            5分钟内<span class="blue underline">免费</span
+            >创建一份简历，百万毕业生的最佳选择
+          </p>
+          <a href="/login"> 点击开始创建 </a>
+        </div>
+        <div class="banner-right">
+          <img src="./assets/resume.png" />
+        </div>
       </div>
     </section>
     <div class="display-mobile banner-resume">
