--- a/onboarding-app/src/main/resources/templates/pages/home.html
+++ b/onboarding-app/src/main/resources/templates/pages/home.html
@@ -39,7 +39,7 @@
           <a href="/login"> 点击开始创建 </a>
         </div>
         <div class="banner-right">
-          <img src="./assets/resume.png" />
+          <img src="./assets/resume-with-shadow.png" />
         </div>
       </div>
     </section>
