岗位匹配-- Final Touch, UI Change (#334)
* update job listing page, add auto complete of country + city

* update job search city/country

* update a snapshot

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>

--- a/webapp/src/features/JobsMatcher/styles/JobDetails.module.css
+++ b/webapp/src/features/JobsMatcher/styles/JobDetails.module.css
@@ -97,11 +97,12 @@
 }
 
 .job-details-description {
-  height: 381px;
+  height: calc(100vh - 300px);
   font-size: 16px;
   line-height: 2;
   color: #333333;
   padding: 20px 0;
+  overflow: auto;
 }
 
 .job-details-description-label {
