--- a/webapp/src/features/SmartResume/styles/ResumePreview.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumePreview.module.css
@@ -10,13 +10,18 @@
 }
 
 /* Hide scrollbar But Keep Functionality */
+
 /* Hide scrollbar for Chrome, Safari and Opera */
+
 .container::-webkit-scrollbar {
   display: none;
 }
+
 .container {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .pageContainer {
@@ -37,6 +42,7 @@
   width: calc(100% - 1080px);
   bottom: 0;
 }
+
 .widgetContainer div {
   max-width: 720px;
   margin: 0 auto;
@@ -52,19 +58,23 @@
   border: none;
   padding: 10px 28px;
 }
+
 .widgetContainer button:hover {
   background-color: #0069d9;
   border-color: #0062cc;
 }
+
 .widgetContainer button.whiteBtn {
   background-color: white;
   color: #3e89ec;
   display: flex;
   align-items: center;
 }
+
 .widgetContainer button.whiteBtn:hover {
   color: #0069d9;
 }
+
 .widgetContainer button.circle {
   border-radius: 50%;
   height: 40px;
@@ -72,6 +82,7 @@
   padding: 0;
   font-weight: bold;
 }
+
 .widgetContainer button:focus {
   outline: none;
 }
@@ -113,7 +124,8 @@
   display: flex;
   align-items: center;
 }
-.headerContentTop > div {
+
+.headerContentTop>div {
   margin-right: 15px;
 }
 
@@ -124,6 +136,7 @@
   text-align: left;
   color: #333333;
 }
+
 .headerContentSchool {
   font-weight: bold;
   color: #3e89ec;
@@ -138,7 +151,8 @@
   margin-top: 10px;
   padding: 5px;
 }
-.headerContentContact > div {
+
+.headerContentContact>div {
   padding: 0 5px;
 }
 
@@ -168,6 +182,7 @@
   justify-content: space-between;
   margin-top: 15px;
 }
+
 .infoGroupTitle {
   color: #3e89ec;
   font-weight: bold;
@@ -190,16 +205,18 @@
   box-shadow: inset 0px 40px 0px rgba(0, 0, 0, 0.1), inset 0px 0px 0px white;
   margin: 20px 0 20px -30px;
 }
+
 .previewWrapper {
   padding-bottom: 50px;
 }
-.previewWrapper,
-.iframeStyle {
+
+.previewWrapper, .iframeStyle {
   width: 100%;
   height: 100%;
 }
 
 /* resume tips style  */
+
 .modalCloseButton {
   width: 40px;
   height: 40px;
@@ -213,29 +230,32 @@
 .modalCloseButton:hover .closeImg {
   display: none;
 }
+
 .modalCloseButton .closeImgOnHover {
   display: none;
 }
+
 .modalCloseButton:hover .closeImgOnHover {
   display: block;
 }
 
-
 /* 编辑主题色styles  */
-.colorSquare,
-.colorCircle{
+
+.colorSquare, .colorCircle {
   width: 1rem;
   height: 1rem;
   display: inline-block;
   margin: 0 10px;
-  cursor:pointer;
+  cursor: pointer;
 }
-.colorCircle{
+
+.colorCircle {
   border-radius: 0.5rem;
 }
-.colorPickerContainer{
+
+.colorPickerContainer {
   position: sticky;
-  bottom: 100px;
+  bottom: 10px;
   left: 40px;
   width: 200px;
   height: 50px;
@@ -254,7 +274,7 @@
   .widgetContainer {
     width: calc(100% - 800px);
   }
-  .colorPickerContainer{
+  .colorPickerContainer {
     position: sticky;
     bottom: 10px;
   }
