--- a/onboarding-app/src/main/resources/templates/pages/home.html
+++ b/onboarding-app/src/main/resources/templates/pages/home.html
@@ -17,8 +17,8 @@
           <a href="/" class="hidden-mobile nav-item" style="display:none">智能创建</a>
           <a href="/" class="hidden-mobile nav-item" style="display:none">背景提升</a>
           <a href="/" class="hidden-mobile nav-item" style="display:none">关于我们</a>
-          <a href="/login" class="header-right">登录</a>
-          <a href="/sign-up" class="header-right">免费注册</a>
+          <a href="/login" class="header-right login">登录</a>
+          <a href="/sign-up" class="header-right signupButton">免费注册</a>
         </div>
       </nav>
     </header>
