--- a/webapp/src/features/JobCollection/components/JobCollection.scss
+++ b/webapp/src/features/JobCollection/components/JobCollection.scss
@@ -8,7 +8,11 @@
   }
   .btn-container {
     margin-bottom: 1.625rem;
-
+    float:left;
+  }
+  .jobCards {
+    display: block;
+    margin-top: 100px !important;
     .all {
       margin-right: 1.25rem;
       border-top-right-radius: 20px !important;
@@ -29,6 +33,18 @@
 
       background-color: #007bff;
       border-color: #007bff;
+    }
+  }
+  .sort-container {
+    float: right;
+    .header{
+      float: none !important;
+      color: #bababa !important;
+    }
+    .dropdown {
+      color: #bababa !important;
+      background-color: #f5f5f5 !important;
+      border-color: #bababa !important;
     }
   }
 }
