--- a/webapp/src/features/SmartResume/styles/ResumePreview.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumePreview.module.css
@@ -254,9 +254,8 @@
 }
 
 .colorPickerContainer {
-  position: sticky;
-  bottom: 10px;
-  left: 40px;
+  position: fixed;
+  bottom: 70px;
   width: 200px;
   height: 50px;
   border-radius: 8px;
@@ -273,9 +272,5 @@
   }
   .widgetContainer {
     width: calc(100% - 800px);
-  }
-  .colorPickerContainer {
-    position: sticky;
-    bottom: 10px;
   }
 }
