--- a/webapp/src/features/SmartResume/styles/ResumeTips.module.css
+++ b/webapp/src/features/SmartResume/styles/ResumeTips.module.css
@@ -1,7 +1,7 @@
 .container {
-  position: sticky;
+  position: fixed;
   left: 1000px;
-  bottom: 20px;
+  bottom: 70px;
   width: 360px;
   height: 740px;
   border-radius: 8px;
@@ -68,10 +68,4 @@
   background-color: #f2f4f9;
   font-size: 14px;
   position: relative;
-}
-
-@media only screen and (max-width: 1440px) {
-  .container {
-    bottom: 20px;
-  }
 }
