--- a/webapp/src/components/SingleDatePicker.scss
+++ b/webapp/src/components/SingleDatePicker.scss
@@ -1,4 +1,25 @@
-.form_item.validated .DateInput_input {
+.ant-space.ant-space-vertical{
+  background-color: #f2f4f9;
+  color: #d5d9e6;
+  border-radius: 8px;
+  border: none;
+  color: #333;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
+  padding: 4px 11px 4px;
+  width: 100%;
+  .ant-picker{
+    padding:0;
+    border:none;
+    background: none;
+    width: 100%;
+  }
+  .ant-picker-input>input{
+    box-shadow: none;
+  }
+}
+
+
+.form_item.validated .ant-space.ant-space-vertical {
   border-color: #28a745;
   padding-right: calc(1.5em + 0.75rem);
   background-repeat: no-repeat;
@@ -7,7 +28,7 @@
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
 }
 
-.form_item.not-validated .DateInput_input {
+.form_item.not-validated .ant-space.ant-space-vertical {
     border-color: #dc3545;
     padding-right: calc(1.5em + 0.75rem);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
