Tf 335 经历写作助手更新 (#382)
* feat: 经历写作助手调整

* feat: 经历写作助手更新

--- a/webapp/src/features/SmartResume/components/Assistant/Dropdown/DropdownGroup.scss
+++ b/webapp/src/features/SmartResume/components/Assistant/Dropdown/DropdownGroup.scss
@@ -7,8 +7,11 @@
       width: 64px;
     }
   }
+  .dropdown-1 {
+    flex: 2;
+  }
   .dropdown-2 {
-    flex: 1;
+    flex: 3;
     .selected-option {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
