--- a/webapp/src/features/SmartResume/components/Assistant/Dropdown/DropdownGroup.scss
+++ b/webapp/src/features/SmartResume/components/Assistant/Dropdown/DropdownGroup.scss
@@ -4,7 +4,7 @@
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     .title {
-      width: 64px;
+      width: 100%;
     }
   }
   .dropdown-1 {
