--- a/webapp/src/features/SmartResume/components/Assistant/LanguageToggle.scss
+++ b/webapp/src/features/SmartResume/components/Assistant/LanguageToggle.scss
@@ -1,22 +1,41 @@
 .toggle-container {
+  &::before {
+    z-index: -1;
+    position: absolute;
+    left:  0;
+    top: 0;
+    content: "";
+    display: block;
+    width: 60px;
+    border-radius: 21px;
+    height: 100%;
+    background-color: #007af8;
+    transform: translateX(100%);
+    transition: transform .2s ease-in;
+  }
+  &.active::before {
+    transform: translateX(0%);
+  }
   position: absolute;
   right: 20px;
   bottom: 20px;
   border-radius: 21px;
+  box-shadow: 0 1px 2px 1px #e3e3e3;
   padding: 10px 0;
-  background-color: #007af8;
   .language-option {
     display: inline-block;
     font-size: 14px;
     font-weight: bold;
     width: 60px;
     text-align: center;
-    color: #fff;
+    color: #98c4f1;
     &:hover {
-      color: #98c4f1;
+      color: #007af8;
       cursor: pointer;
       // color: #007af8;
     }
+    &.active {
+      color: #fff;
+    }
   }
-
 }
