--- a/webapp/src/features/SmartResume/components/Assistant/LanguageToggle.scss
+++ b/webapp/src/features/SmartResume/components/Assistant/LanguageToggle.scss
@@ -16,6 +16,8 @@
   &.active::before {
     transform: translateX(0%);
   }
+  z-index: 1;
+  background-color: #fff;
   position: absolute;
   right: 20px;
   bottom: 20px;
