--- a/webapp/src/features/SmartResume/components/Assistant/Dropdown/Dropdown.scss
+++ b/webapp/src/features/SmartResume/components/Assistant/Dropdown/Dropdown.scss
@@ -36,7 +36,7 @@
       cursor: pointer;
       padding: 0.625rem 1.25rem;
       font-family: '微软雅黑';
-      font-size: 1rem;
+      font-size: 14px;
       font-weight: bold;
       font-stretch: normal;
       font-style: normal;
